# lex.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: lex-howto.md
fuzz/: CMakeLists.txt  fuzz_lfile.cc  fuzz_regex.cc  fuzz_runtime.cc  runtime_grammar.l
fuzz/corpus/lfile/: 010_minimal.l  011_only_definitions.l  013_one_rule.l  020_ascii_letters.l  023_escape_n.l  025_escape_oct.l  027_escape_bs_tab.l  030_class.l  034_class_high.l  041_plus.l  042_question.l  043_repeat_n.l  050_bol.l  051_eol.l  052_both.l  056_eol_class.l  060_alt.l  063_alt_quant.l  070_macro.l  071_macro_nested.l  081_tie.l  082_keyword_vs_id.l  090_sc_inclusive.l  091_sc_exclusive.l  092_sc_multi.l  094_eof_action.l  095_eof_initial.l  103_pipe.l  104_begin.l  107_input.l  112_prefix.l  130_utf8_bom.l  131_utf8_4byte.l  132_utf8_class.l  140_many_rules.l  144_multiline_prologue.l  145_any_state_only.l
fuzz/corpus/regex/: 011_only_definitions  012_section1_verbatim  013_one_rule  014_action_braces  015_section1_comment  020_ascii_letters  021_digits_only  022_quoted_string  023_escape_n  024_escape_hex  025_escape_oct  026_escape_quote  027_escape_bs_tab  028_escape_misc  030_class  031_class_neg  032_class_mixed  033_class_rbrack  034_class_high  035_class_dash  036_class_escapes  040_star  041_plus  042_question  043_repeat_n  044_repeat_nm  045_repeat_open  046_repeat_lo0  050_bol  051_eol  052_both  053_bol_alt  056_eol_class  060_alt  061_alt_group  062_alt_prec  063_alt_quant  070_macro  071_macro_nested  072_macro_alt  (+36 more)
lib/: CMakeLists.txt  lex.pc.in  main.c  yywrap.c
src/: CMakeLists.txt  codegen.cpp  codegen.h  codegen.hpp  dfa.cpp  dfa.h  dfa.hpp  diag.cpp  diag.h  eclass.cpp  eclass.hpp  main.cpp  nfa.cpp  nfa.h  nfa.hpp  platform.hpp  platform_posix.cpp  platform_windows.cpp  regex.cpp  regex.h  regex.hpp  source.cpp  source.h  source.hpp  tables.cpp  tables.hpp
tests/: CMakeLists.txt  differential.cmake  run_diff.cmake  run_skeleton.cmake.in  run_tables_load.cmake.in
tests/cases/011_only_definitions/: input.txt
tests/cases/012_section1_verbatim/: input.txt  scanner.l
tests/cases/014_action_braces/: input.txt  scanner.l
tests/cases/015_section1_comment/: scanner.l
tests/cases/021_digits_only/: input.txt  scanner.l
tests/cases/022_quoted_string/: input.txt  scanner.l
tests/cases/024_escape_hex/: scanner.l
tests/cases/026_escape_quote/: input.txt  scanner.l
tests/cases/027_escape_bs_tab/: input.txt
tests/cases/028_escape_misc/: input.txt  scanner.l
tests/cases/031_class_neg/: input.txt  scanner.l
tests/cases/032_class_mixed/: input.txt  scanner.l
tests/cases/033_class_rbrack/: input.txt  scanner.l
tests/cases/034_class_high/: input.txt
tests/cases/035_class_dash/: input.txt  scanner.l
tests/cases/036_class_escapes/: input.txt  scanner.l
tests/cases/040_star/: input.txt  scanner.l
tests/cases/041_plus/: input.txt
tests/cases/042_question/: input.txt
tests/cases/044_repeat_nm/: input.txt  scanner.l
tests/cases/045_repeat_open/: input.txt  scanner.l
tests/cases/046_repeat_lo0/: input.txt  scanner.l
tests/cases/050_bol/: input.txt
tests/cases/051_eol/: input.txt
tests/cases/052_both/: input.txt
tests/cases/053_bol_alt/: input.txt  scanner.l
tests/cases/056_eol_class/: input.txt
tests/cases/061_alt_group/: input.txt  scanner.l
tests/cases/062_alt_prec/: input.txt  scanner.l
tests/cases/063_alt_quant/: input.txt
tests/cases/070_macro/: input.txt
tests/cases/071_macro_nested/: input.txt
tests/cases/072_macro_alt/: input.txt  scanner.l
tests/cases/080_longest/: input.txt  scanner.l
tests/cases/082_keyword_vs_id/: input.txt
tests/cases/090_sc_inclusive/: input.txt
tests/cases/091_sc_exclusive/: input.txt
tests/cases/092_sc_multi/: input.txt
tests/cases/093_sc_any/: input.txt  scanner.l
tests/cases/095_eof_initial/: input.txt
tests/cases/099_multi_sc_decl/: input.txt  scanner.l
tests/cases/100_echo/: input.txt  scanner.l
tests/cases/101_yytext/: scanner.l
tests/cases/102_yyleng/: input.txt  scanner.l
tests/cases/103_pipe/: input.txt
tests/cases/104_begin/: input.txt
tests/cases/105_yyless/: scanner.l
tests/cases/106_unput/: input.txt  scanner.l
tests/cases/107_input/: input.txt
tests/cases/108_yytext_chars/: input.txt  scanner.l
tests/cases/110_case_insensitive/: input.txt  scanner.l
tests/cases/111_yylineno/: input.txt  scanner.l
tests/cases/113_nodefault/: scanner.l
tests/cases/117_ignored_option/: scanner.l
tests/cases/120_empty_input/: scanner.l
tests/cases/121_no_newline/: scanner.l
tests/cases/122_large_input/: input.txt  scanner.l
tests/cases/131_utf8_4byte/: input.txt
tests/cases/132_utf8_class/: input.txt
tests/cases/140_many_rules/: input.txt
tests/cases/141_deep_nesting/: input.txt  scanner.l
tests/cases/142_long_alt/: input.txt  scanner.l
tests/cases/143_nul_bytes/: input.txt  scanner.l
tests/cases/145_any_state_only/: input.txt
tests/cases/150_scan_string/: scanner.l
tests/cases/151_scan_bytes/: scanner.l
tests/cases/152_scan_buffer/: scanner.l
tests/cases/153_buffer_stack/: input.txt  scanner.l
tests/cases/154_yy_scan_twice/: scanner.l
tests/cases/160_reentrant_basic/: scanner.l
tests/cases/161_reentrant_extra/: scanner.l
tests/cases/162_bison_bridge/: scanner.l
tests/cases/163_bison_locations/: scanner.l
tests/cases/164_two_scanners/: scanner.l
tests/cases/165_classic_still_works/: input.txt  scanner.l
tests/cases/170_user_action/: scanner.l
tests/cases/171_user_init/: scanner.l
tests/cases/172_user_action_block/: input.txt  scanner.l
tests/cases/180_trail_fixed/: input.txt  scanner.l
tests/cases/182_trail_alt/: input.txt  scanner.l
tests/cases/183_trail_dollar/: input.txt  scanner.l
tests/cases/200_top_block/: scanner.l
tests/cases/210_push_pop/: input.txt  scanner.l
tests/cases/211_top_state/: input.txt  scanner.l
tests/cases/230_reject_simple/: input.txt  scanner.l
tests/skeleton/: scanner.l
tests/tables_load/: driver.c  expected.txt  input.txt  scanner.l
tests/unit/: CMakeLists.txt  test_internal.cpp
(+127 files in other folders)
